--- a/web/style.css
+++ b/web/style.css
@@ -95,3 +95,11 @@ span{ display: inline-block; }
     padding: 0.2em;
     font-weight: normal;
 }
+
+.notification {
+    font-weight: bold;
+    -webkit-transition: all 3s; 
+       -moz-transition: all 3s; 
+         -o-transition: all 3s;
+            transition: all 3s;
+}
